# node-taglib3

./: .gitignore  .npmignore  .travis.yml  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
src/: taglib2.cc  taglib3.cc  win_delay_load_hook.cc
tests/: index.js
